--- a/SnakeGame/Info.plist
+++ b/SnakeGame/Info.plist
@@ -10,5 +10,7 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+    <key>UIUserInterfaceStyle</key>
+    <string>Light</string>
 </dict>
 </plist>
